Fix planner view sizing issue where row headers overlapped row data when planner was not wide enough

--- a/calendar/templates/pixelegg/app.less
+++ b/calendar/templates/pixelegg/app.less
@@ -1133,13 +1133,6 @@ e.g. the div with class calendar_calTimeGrid is generated by the timeGridWidget 
     line-height: 20px;
 }
 
-/* calendar_eventRows contain multiple eventRowWidgets
- */
-.calendar_eventRows, .calendar_plannerHeaderRows {
-    left: 15%;	/* need to be identical for calendar_eventRows and calendar_plannerHeaderRows and match width of calendar_plannerRowHeader/calendar_plannerHeaderTitle */
-    width: 85%;
-}
-
 /**
  * Filler for month with less then 31 days in yearly planner
  */
